# Teleseismic_Body-Wave_Inversion

./: .gitignore  Makefile  PREM.txt  README.md  conv.sac.farm  conv.sac.iris  data  dependencies.sh  hypo  mk_conv.farm.pl  rdseed2sac  rotSH  sacmacro
.devcontainer/: Dockerfile  devcontainer.json
Input/: fort.1.Peru  i_green  i_green3  i_gregra  i_inversion  i_plotcm
Kikuchi/Main/: conv.sac.farm.f  conv.sac.iris.f  gr3.f  graphics3.f  green.f  green3.f  gregra.f  inversion.f  inversion3.f  jacobi.f  mom3.f~  plotw.f  qgausx.f  qgausy.f  qgausz.f
Kikuchi/Subroutine/: readme  sub.conv.f  sub.cubicd.f  sub.dbas.f  sub.det00.f  sub.lvns1.f  sub.mcplo.f  sub.mtrx.f  sub.qfm.f  sub.quadrd.f  sub.radp.f  (+2 more)
Main/: gr3.f  inversion.f  inversion2.f  mom3.f  plotcm.f  plotw.f
Output/: plot38
Recipes/: lubksb.f  ludcmp.f  readme
Subroutine/: sub.bodyfc.f  sub.corr.f  sub.det0.f  sub.det1.f  sub.eig1.f  sub.equarea.f  sub.filter.f  sub.instw.f  sub.laspack.f  sub.mcplot0.f  sub.nplane.f  sub.order.f  sub.plotw.f  sub.stnplx.f
Wilber3/: mk_conv.farm.pl
compiled/: gr3  graphics  graphics2  graphics3  green  green3  gregra  inversion  inversion2  inversion3  listg  lists  mom3  plotcm  plotw
dependencies/: FetchData-2020.314
paper/: lab_03.tex  perfil_tit.tex  refs.bib
scripts/python/: config.py  data_fetching.py  dataless.py  fetch_and_process.py  main.py  pyproject.toml  requirements.txt  utils.py
scripts/python/preprocesamiento/: config.py  data_fetching.py  file_handling.py  main.py  pyproject.toml
scripts/python/preprocesamiento/utils/: cleaning.py  time.py
(+76 files in other folders)
