[tool.poetry]
name = "preprocesamiento"
version = "0.1.0"
description = ""
authors = ["David <dadch1404@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
poethepoet = "^0.24.4"

[tool.poe.tasks]
check-lint = "ruff check ."
fix-lint = "ruff check . --fix"
format = "ruff format ."

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
